// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link prominence render prominence default 1`] = `
<DocumentFragment>
  .cache-18qh8vx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-18qh8vx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-18qh8vx-StyledLink>* {
  pointer-events: none;
}

.cache-18qh8vx-StyledLink:hover,
.cache-18qh8vx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-18qh8vx-StyledLink:hover .e1afnb7a2,
.cache-18qh8vx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-18qh8vx-StyledLink:hover::after,
.cache-18qh8vx-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-18qh8vx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-18qh8vx-StyledLink e1afnb7a0"
    href="/"
    prominence="default"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence strong 1`] = `
<DocumentFragment>
  .cache-acfeh6-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-acfeh6-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-acfeh6-StyledLink>* {
  pointer-events: none;
}

.cache-acfeh6-StyledLink:hover,
.cache-acfeh6-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #ffffff;
  text-decoration-color: #ffffff;
}

.cache-acfeh6-StyledLink:hover .e1afnb7a2,
.cache-acfeh6-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-acfeh6-StyledLink:hover::after,
.cache-acfeh6-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-acfeh6-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-acfeh6-StyledLink e1afnb7a0"
    href="/"
    prominence="strong"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence weak 1`] = `
<DocumentFragment>
  .cache-18qh8vx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-18qh8vx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-18qh8vx-StyledLink>* {
  pointer-events: none;
}

.cache-18qh8vx-StyledLink:hover,
.cache-18qh8vx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-18qh8vx-StyledLink:hover .e1afnb7a2,
.cache-18qh8vx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-18qh8vx-StyledLink:hover::after,
.cache-18qh8vx-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-18qh8vx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-18qh8vx-StyledLink e1afnb7a0"
    href="/"
    prominence="weak"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with bad sentiment 1`] = `
<DocumentFragment>
  .cache-h8hg1o-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #464959;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-h8hg1o-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-h8hg1o-StyledLink>* {
  pointer-events: none;
}

.cache-h8hg1o-StyledLink:hover,
.cache-h8hg1o-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #464959;
  text-decoration-color: #464959;
}

.cache-h8hg1o-StyledLink:hover .e1afnb7a2,
.cache-h8hg1o-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-h8hg1o-StyledLink:hover::after,
.cache-h8hg1o-StyledLink:focus::after {
  background-color: #464959;
}

.cache-h8hg1o-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-h8hg1o-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 1`] = `
<DocumentFragment>
  .cache-4r3arx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-4r3arx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-4r3arx-StyledLink>* {
  pointer-events: none;
}

.cache-4r3arx-StyledLink:hover,
.cache-4r3arx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-4r3arx-StyledLink:hover .e1afnb7a2,
.cache-4r3arx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-4r3arx-StyledLink:hover::after,
.cache-4r3arx-StyledLink:focus::after {
  background-color: #521094;
}

.cache-4r3arx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-4r3arx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 2`] = `
<DocumentFragment>
  .cache-19bi72l-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-19bi72l-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-19bi72l-StyledLink>* {
  pointer-events: none;
}

.cache-19bi72l-StyledLink:hover,
.cache-19bi72l-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-19bi72l-StyledLink:hover .e1afnb7a2,
.cache-19bi72l-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.cache-19bi72l-StyledLink:hover::after,
.cache-19bi72l-StyledLink:focus::after {
  background-color: #521094;
}

.cache-19bi72l-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="cache-19bi72l-StyledLink e1afnb7a0"
    href="/"
  >
    <svg
      class="e1afnb7a2 cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 16 16"
    >
      <path
        d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
      />
    </svg>
    Hello
  </a>
  .cache-4r3arx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-4r3arx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-4r3arx-StyledLink>* {
  pointer-events: none;
}

.cache-4r3arx-StyledLink:hover,
.cache-4r3arx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-4r3arx-StyledLink:hover .e1afnb7a2,
.cache-4r3arx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-4r3arx-StyledLink:hover::after,
.cache-4r3arx-StyledLink:focus::after {
  background-color: #521094;
}

.cache-4r3arx-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="cache-4r3arx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
    <svg
      class="e1afnb7a2 cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
      />
    </svg>
  </a>
  .cache-4r3arx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-4r3arx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-4r3arx-StyledLink>* {
  pointer-events: none;
}

.cache-4r3arx-StyledLink:hover,
.cache-4r3arx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-4r3arx-StyledLink:hover .e1afnb7a2,
.cache-4r3arx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-4r3arx-StyledLink:hover::after,
.cache-4r3arx-StyledLink:focus::after {
  background-color: #521094;
}

.cache-4r3arx-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-4r3arx-StyledLink e1afnb7a0"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
  .cache-19bi72l-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-19bi72l-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-19bi72l-StyledLink>* {
  pointer-events: none;
}

.cache-19bi72l-StyledLink:hover,
.cache-19bi72l-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-19bi72l-StyledLink:hover .e1afnb7a2,
.cache-19bi72l-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.cache-19bi72l-StyledLink:hover::after,
.cache-19bi72l-StyledLink:focus::after {
  background-color: #521094;
}

.cache-19bi72l-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-19bi72l-StyledLink e1afnb7a0"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with no sentiment 1`] = `
<DocumentFragment>
  .cache-18qh8vx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-18qh8vx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-18qh8vx-StyledLink>* {
  pointer-events: none;
}

.cache-18qh8vx-StyledLink:hover,
.cache-18qh8vx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-18qh8vx-StyledLink:hover .e1afnb7a2,
.cache-18qh8vx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-18qh8vx-StyledLink:hover::after,
.cache-18qh8vx-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-18qh8vx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-18qh8vx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with oneLine 1`] = `
<DocumentFragment>
  .cache-14uieys-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-14uieys-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-14uieys-StyledLink>* {
  pointer-events: none;
}

.cache-14uieys-StyledLink:hover,
.cache-14uieys-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-14uieys-StyledLink:hover .e1afnb7a2,
.cache-14uieys-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-14uieys-StyledLink:hover::after,
.cache-14uieys-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-14uieys-StyledLink:active {
  text-decoration-thickness: 2px;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 200px;"
  >
    <a
      class="cache-14uieys-StyledLink e1afnb7a0"
      href="/"
    >
      Hello this is a very long text that should be truncated
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link render correctly with sizes 1`] = `
<DocumentFragment>
  .cache-18qh8vx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-18qh8vx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-18qh8vx-StyledLink>* {
  pointer-events: none;
}

.cache-18qh8vx-StyledLink:hover,
.cache-18qh8vx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-18qh8vx-StyledLink:hover .e1afnb7a2,
.cache-18qh8vx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-18qh8vx-StyledLink:hover::after,
.cache-18qh8vx-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-18qh8vx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-18qh8vx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
  ,
  .cache-16pelpn-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-16pelpn-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-16pelpn-StyledLink>* {
  pointer-events: none;
}

.cache-16pelpn-StyledLink:hover,
.cache-16pelpn-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-16pelpn-StyledLink:hover .e1afnb7a2,
.cache-16pelpn-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-16pelpn-StyledLink:hover::after,
.cache-16pelpn-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-16pelpn-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-16pelpn-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
  ,
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-4r3arx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-4r3arx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-4r3arx-StyledLink>* {
  pointer-events: none;
}

.cache-4r3arx-StyledLink:hover,
.cache-4r3arx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-4r3arx-StyledLink:hover .e1afnb7a2,
.cache-4r3arx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-4r3arx-StyledLink:hover::after,
.cache-4r3arx-StyledLink:focus::after {
  background-color: #521094;
}

.cache-4r3arx-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-4r3arx-StyledLink e1afnb7a0"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render danger 1`] = `
<DocumentFragment>
  .cache-in6dn2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ac2740;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-in6dn2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-in6dn2-StyledLink>* {
  pointer-events: none;
}

.cache-in6dn2-StyledLink:hover,
.cache-in6dn2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #ac2740;
  text-decoration-color: #ac2740;
}

.cache-in6dn2-StyledLink:hover .e1afnb7a2,
.cache-in6dn2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-in6dn2-StyledLink:hover::after,
.cache-in6dn2-StyledLink:focus::after {
  background-color: #ac2740;
}

.cache-in6dn2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-in6dn2-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render info 1`] = `
<DocumentFragment>
  .cache-18qh8vx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-18qh8vx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-18qh8vx-StyledLink>* {
  pointer-events: none;
}

.cache-18qh8vx-StyledLink:hover,
.cache-18qh8vx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-18qh8vx-StyledLink:hover .e1afnb7a2,
.cache-18qh8vx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-18qh8vx-StyledLink:hover::after,
.cache-18qh8vx-StyledLink:focus::after {
  background-color: #005da3;
}

.cache-18qh8vx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-18qh8vx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render neutral 1`] = `
<DocumentFragment>
  .cache-h8hg1o-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #464959;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-h8hg1o-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-h8hg1o-StyledLink>* {
  pointer-events: none;
}

.cache-h8hg1o-StyledLink:hover,
.cache-h8hg1o-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #464959;
  text-decoration-color: #464959;
}

.cache-h8hg1o-StyledLink:hover .e1afnb7a2,
.cache-h8hg1o-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-h8hg1o-StyledLink:hover::after,
.cache-h8hg1o-StyledLink:focus::after {
  background-color: #464959;
}

.cache-h8hg1o-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-h8hg1o-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render primary 1`] = `
<DocumentFragment>
  .cache-4r3arx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-4r3arx-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-4r3arx-StyledLink>* {
  pointer-events: none;
}

.cache-4r3arx-StyledLink:hover,
.cache-4r3arx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-4r3arx-StyledLink:hover .e1afnb7a2,
.cache-4r3arx-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-4r3arx-StyledLink:hover::after,
.cache-4r3arx-StyledLink:focus::after {
  background-color: #521094;
}

.cache-4r3arx-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-4r3arx-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render success 1`] = `
<DocumentFragment>
  .cache-1irz8ce-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #22674e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1irz8ce-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1irz8ce-StyledLink>* {
  pointer-events: none;
}

.cache-1irz8ce-StyledLink:hover,
.cache-1irz8ce-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #22674e;
  text-decoration-color: #22674e;
}

.cache-1irz8ce-StyledLink:hover .e1afnb7a2,
.cache-1irz8ce-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1irz8ce-StyledLink:hover::after,
.cache-1irz8ce-StyledLink:focus::after {
  background-color: #22674e;
}

.cache-1irz8ce-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-1irz8ce-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render warning 1`] = `
<DocumentFragment>
  .cache-z4uknt-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #7c5400;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-z4uknt-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-z4uknt-StyledLink>* {
  pointer-events: none;
}

.cache-z4uknt-StyledLink:hover,
.cache-z4uknt-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #7c5400;
  text-decoration-color: #7c5400;
}

.cache-z4uknt-StyledLink:hover .e1afnb7a2,
.cache-z4uknt-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-z4uknt-StyledLink:hover::after,
.cache-z4uknt-StyledLink:focus::after {
  background-color: #7c5400;
}

.cache-z4uknt-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-z4uknt-StyledLink e1afnb7a0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
